# command-launcher

./: .gitignore  README.md  config.yaml  pyproject.toml
src/command_launcher/: main.py
tests/: test_main.py
